JDK11 build.
- Generated XMLBeans sources added
- com.sun.plaf dependency replaced by javax.swing.plaf.basic
- groovy dependency upgraded/replaced
- concurrency bug workaround (not clean, but working)
- Analytics disabled by default /removed dependencies on analytics
- disable browser component