@@ -1,171 +1,147 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+  <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.smartbear.soapui</groupId>
-    <artifactId>soapui-project</artifactId>
-    <name>SoapUI project</name>
-    <version>5.6.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
+  <groupId>com.smartbear.soapui</groupId>
+  <artifactId>soapui-project</artifactId>
+  <name>SoapUI project</name>
+    <version>5.6.1-kimholan</version>
+  <packaging>pom</packaging>
 
-    <repositories>
-        <repository>
-            <id>smartbear-soapui-repository</id>
-            <url>https://www.soapui.org/repository/maven2</url>
-        </repository>
-    </repositories>
+  <repositories>
+    <repository>
+      <id>smartbear-sweden-repository</id>
+      <url>http://www.soapui.org/repository/maven2</url>
+    </repository>
+  </repositories>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-        <!-- Custom properties -->
-        <assembly.build.directory>${project.build.directory}/assemblies</assembly.build.directory>
-        <installer.build.directory>${project.build.directory}/install4j</installer.build.directory>
-        <build.date>${maven.build.timestamp}</build.date>
+    <!-- Custom properties -->
+    <assembly.build.directory>${project.build.directory}/assemblies</assembly.build.directory>
+    <installer.build.directory>${project.build.directory}/install4j</installer.build.directory>
+    <build.date>${maven.build.timestamp}</build.date>
 
-        <project.name.full>SoapUI-${project.version}</project.name.full>
-        <project.name.visible>SoapUI</project.name.visible>
-        <project.src.artifactId>soapui</project.src.artifactId>
+    <project.name.full>SoapUI-${project.version}</project.name.full>
+    <project.name.visible>SoapUI</project.name.visible>
+    <project.src.artifactId>soapui</project.src.artifactId>
 
-        <javafx.version>2.2</javafx.version>
-        <!-- Set this property to the location of your JavaFX runtime jar if you want to compile with Java 6 -->
-        <javafx.runtime.lib.jar>${java.home}/lib/jfxrt.jar</javafx.runtime.lib.jar>
+    <javafx.version>2.2</javafx.version>
+    <!-- Set this property to the location of your JavaFX runtime jar if you want to compile with Java 6 -->
+    <javafx.runtime.lib.jar>${java.home}/lib/jfxrt.jar</javafx.runtime.lib.jar>
+  </properties>
 
-        <!-- org.apache.maven.plugins -->
-        <maven-enforcer-plugin-version>3.0.0-M2</maven-enforcer-plugin-version>
-        <maven-clean-plugin-version>3.1.0</maven-clean-plugin-version>
-        <maven-compiler-plugin-version>3.8.1</maven-compiler-plugin-version>
-        <maven-javadoc-plugin-version>3.1.0</maven-javadoc-plugin-version>
-        <maven-deploy-plugin-version>3.0.0-M1</maven-deploy-plugin-version>
-        <maven-install-plugin-version>3.0.0-M1</maven-install-plugin-version>
-        <maven-site-plugin-version>3.7.1</maven-site-plugin-version>
-        <maven-jar-plugin-version>3.1.2</maven-jar-plugin-version>
-        <maven-surefire-plugin-version>3.0.0-M3</maven-surefire-plugin-version>
-        <maven-plugin-plugin-version>3.6.0</maven-plugin-plugin-version>
-        <maven-failsafe-plugin-version>3.0.0-M3</maven-failsafe-plugin-version>
-        <maven-assembly-plugin-version>3.1.1</maven-assembly-plugin-version>
-        <!-- org.codehaus.mojo -->
-        <versions-maven-plugin-version>2.7</versions-maven-plugin-version>
-        <exec-maven-plugin-version>1.6.0</exec-maven-plugin-version>
 
-        <!-- other -->
-        <maven-gitlog-plugin-version>1.9.1</maven-gitlog-plugin-version>
 
-        <requireMavenVersion-value>3.0.5</requireMavenVersion-value>
-    </properties>
-
-    <modules>
+  <profiles>
+    <profile>
+      <id>soapui</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <modules>
         <module>soapui</module>
-        <module>soapui-maven-plugin</module>
         <module>soapui-installer</module>
-        <module>soapui-maven-plugin-tester</module>
         <module>soapui-system-test</module>
-    </modules>
-
-    <build>
+      </modules>
+      <build>
         <plugins>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>versions-maven-plugin</artifactId>
-                <version>${versions-maven-plugin-version}</version>
-                <configuration>
-                    <generateBackupPoms>false</generateBackupPoms>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-clean-plugin</artifactId>
-                <version>${maven-clean-plugin-version}</version>
-                <configuration>
-                    <filesets>
-                        <fileset>
-                            <directory>${project.basedir}</directory>
-                            <includes>
-                                <include>*.log</include>
-                            </includes>
-                            <followSymlinks>false</followSymlinks>
-                        </fileset>
-                    </filesets>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>${maven-compiler-plugin-version}</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>${maven-javadoc-plugin-version}</version>
-                <configuration>
-                    <maxmemory>1024m</maxmemory>
-                    <additionalparam>-Xdoclint:none</additionalparam>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-enforcer-plugin</artifactId>
-                <version>${maven-enforcer-plugin-version}</version>
-                <executions>
-                    <execution>
-                        <id>enforce-versions</id>
-                        <goals>
-                            <goal>enforce</goal>
-                        </goals>
-                        <configuration>
-                            <rules>
-                                <requireMavenVersion>
-                                    <version>${requireMavenVersion-value}</version>
-                                </requireMavenVersion>
-                            </rules>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>enforce-bytecode-version</id>
-                        <goals>
-                            <goal>enforce</goal>
-                        </goals>
-                        <configuration>
-                            <rules>
-                                <!-- http://mojo.codehaus.org/extra-enforcer-rules/enforceBytecodeVersion.html -->
-                                <enforceBytecodeVersion>
-                                    <maxJdkVersion>1.8</maxJdkVersion>
-                                </enforceBytecodeVersion>
-                            </rules>
-                            <fail>true</fail>
-                        </configuration>
-                    </execution>
-                </executions>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>extra-enforcer-rules</artifactId>
-                        <version>1.1</version>
-                    </dependency>
-                </dependencies>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-deploy-plugin</artifactId>
-                <version>${maven-deploy-plugin-version}</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-install-plugin</artifactId>
-                <version>${maven-install-plugin-version}</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-site-plugin</artifactId>
-                <version>${maven-site-plugin-version}</version>
-            </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-clean-plugin</artifactId>
+            <version>2.5</version>
+            <configuration>
+              <filesets>
+                <fileset>
+                  <directory>${project.basedir}</directory>
+                  <includes>
+                    <include>*.log</include>
+                  </includes>
+                  <followSymlinks>false</followSymlinks>
+                </fileset>
+              </filesets>
+            </configuration>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.8.0</version>
+            <configuration>
+              <source>11</source>
+              <target>11</target>
+              <compilerArgs>
+                <arg>--module-path</arg>
+                <arg>/home/developer/lib/javafx-sdk-11.0.2/lib</arg>
+                <arg>--add-modules</arg>
+                <arg>javafx.controls,javafx.fxml,javafx.web,javafx.swing</arg>
+              </compilerArgs>
+            </configuration>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-javadoc-plugin</artifactId>
+            <version>2.8.1</version>
+            <configuration>
+              <maxmemory>1024m</maxmemory>
+              <additionalparam>-Xdoclint:none</additionalparam>
+            </configuration>
+          </plugin>
         </plugins>
-    </build>
+      </build>
+    </profile>
+
+    <profile>
+      <id>xmlbeans</id>
+      <activation>
+        <activeByDefault>false</activeByDefault>
+      </activation>
+      <modules>
+        <module>soapui-xmlbeans</module>
+      </modules>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-clean-plugin</artifactId>
+            <version>2.5</version>
+            <configuration>
+              <filesets>
+                <fileset>
+                  <directory>${project.basedir}</directory>
+                  <includes>
+                    <include>*.log</include>
+                  </includes>
+                  <followSymlinks>false</followSymlinks>
+                </fileset>
+              </filesets>
+            </configuration>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.8.0</version>
+            <configuration>
+              <source>8</source>
+              <target>8</target>
+            </configuration>
+          </plugin>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-javadoc-plugin</artifactId>
+            <version>2.8.1</version>
+            <configuration>
+              <maxmemory>1024m</maxmemory>
+              <additionalparam>-Xdoclint:none</additionalparam>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
+
+
 </project>
